--- a/client/src/assests/css/commonStyles.css
+++ b/client/src/assests/css/commonStyles.css
@@ -15,3 +15,11 @@
   text-decoration: underline;
   cursor: pointer;
 }
+
+.image-upload {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
